<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme">


    <Button
        android:id="@+id/specifiedFoodButton2"
        android:layout_width="352dp"
        android:layout_height="81dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="200dp"
        android:background="@color/colorPrimary"
        android:onClick="onHandSearchOnClick"
        android:text="Search By Criteria"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/specifiedFoodButton"
        app:layout_constraintVertical_bias="0.543" />

    <Button
        android:id="@+id/specifiedFoodButton"
        android:layout_width="352dp"
        android:layout_height="81dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="200dp"
        android:background="@color/colorPrimary"
        android:text="Find your food!"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <Button
        android:id="@+id/add_food_button"
        android:layout_width="138dp"
        android:layout_height="63dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="Add Food"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
