<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.MyApp">

    <FrameLayout
        android:id="@+id/searches"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton

        app:layout_constraintBottom_toBottomOf="@id/searches"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/search_fba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="Search"
        android:fontFamily="sans-serif"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/colorPrimary"
        app:icon="@android:drawable/ic_search_category_default"
        app:iconTint="#FFFFFF"/>
</androidx.constraintlayout.widget.ConstraintLayout>