<resources>
    <string name="app_name">Are You Hungry</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorite</string>
    <string name="title_more">More</string>
    <string name="search_food">Search Food</string>
    <string name="random_pick">Random_Pick</string>
    <string name="pick_for_me">Pick For Me</string>
    <string name="all_foods">All Foods &amp; Recipes</string>
    <string name="title_activity_all_foods">AllFoodsActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string-array name="foodSpinner">
        <item>Meat</item>
        <item>Grain</item>
        <item>Vegetable</item>
        <item>Dairy</item>
        <item>Fruit</item>
    </string-array>
    <string name="title_food_list">Foods</string>
    <string name="title_food_detail">Food Detail</string>
    <string name="all_food_page">all food page</string>
    <string name="title_favouritefood_list">FavouriteFoods</string>
    <string name="title_favouritefood_detail">FavouriteFood Detail</string>
    <string name="extended_fab_label">ADD FOOD</string>
    <string name="preference_search">Preference Search!</string>
    <string name="add_favourite">Add Favourite</string>
    <string name="search">Search!</string>
    <string name="add">ADD</string>
    <string name="fatalError">Fatal error</string>
    <string name="warning">Warning</string>
    <string name="add_a_new_food">Add a new food</string>
    <string name="switch_user">switch user</string>
    <string name="title_activity_add_food">Add Food</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_onhand">OnhandActivity</string>
    <string name="next_step">Next Step</string>
    <string name="add_ingredients_and_instructions_for_your_food">Add ingredients and Instructions for your food</string>
    <string name="ingredient_name">ingredient name</string>
    <string name="ingredient_quantity">ingredient quantity</string>
    <string name="now_add_ingredients_and_instructions_for_your_food">Add ingredients\nand Directions</string>
</resources>